# slabpick

./: README.md  pyproject.toml
scripts/: curate.py  generate_gallery.py  merge_coords.py  project_particles.py
src/: coordinates.py  csedit.py  dataio.py  gallery.py  minislab.py  settings.py  slab.py  stacker.py  visualize.py
src/slabpick/: coordinates.py  csedit.py  dataio.py  minislab.py  settings.py  slab.py  stacker.py  visualize.py
src/slabpick/cli/: cs_center_picks.py  cs_map_back.py  cs_map_particles.py  cs_map_slabs.py  curate.py  make_minislabs.py  make_slabs.py  merge_coords.py  normalize_stack.py  plot_coords_dist.py  project_particles.py  project_tomograms.py  rln_map_particles.py
tests/: test_dataio.py  test_minislab.py  test_slab.py
